# finder-enrichment-orchestrator

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_google_ai_client.py  vercel.json
scripts/: example_database_orchestrator.py  example_usage.py  run_api_server.py  test_api.py  test_integration_setup.py  test_synchronous_enrichment.py
src/finder_enrichment/: __init__.py  __main__.py  config.py  kafka_orchestrator.py  logger_config.py
src/finder_enrichment/agentic_services/: agent_config.py  agent_interaction.py  base_agent.py  model_response.py
src/finder_enrichment/agentic_services/description_analyser/: description_analyser.py  description_analyser_agent.py
src/finder_enrichment/agentic_services/image_analyser/: image_analyser.py  image_analyser_agent.py
src/finder_enrichment/agents_sdk_poc/: customer_profile_format.md  customer_profiler_agent.md  listings_curator_agent.md  property_recommendation_app.py
src/finder_enrichment/agents_sdk_poc/customer_profiles/: young_professional_couple.md
src/finder_enrichment/api/: api_server.py  auth.py  globals.py  models.py  orchestrator_api_client.py  security.py  utils.py
src/finder_enrichment/docs/: SECURITY_IMPLEMENTATION_GUIDE.md  SYNCHRONOUS_ENRICHMENT_MIGRATION.md
src/finder_enrichment/kafka/: __init__.py  kafka_client.py  kafka_config.py  kafka_consumer.py  kafka_manager.py  kafka_producer.py
src/finder_enrichment/orchestrator/: ORCHESTRATORS.md  base_orchestrator.py  database_orchestrator.py  estate_agent_utils.py  exceptions.py
src/finder_enrichment/services/: synchronous_enrichment_service.py
src/finder_enrichment/tests/: README_INTEGRATION_TESTS.md  __init__.py  test_auth.py  test_description_analyser_api.py  test_enrichment_api.py  test_enrichment_models.py  test_image_analyser_api.py  test_orchestrator_api_client.py  test_synchronous_enrichment_api.py  test_synchronous_enrichment_service.py  test_synchronous_orchestration_api.py
src/finder_enrichment_ai_client/: __init__.py
(+12 files in other folders)
