[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finder-enrichment"
version = "0.1.0"
description = "Enrichment orchestrator for Finder project"
readme = "README.md"
requires-python = "==3.12.5"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "listings-db-api-client>=1.0.5",
    "listings-db-contracts>=1.0.4",
    "finder-enrichment-db-client>=0.1.5",
    "finder-enrichment-db-contracts>=0.1.5",
    "finder-enrichment-ai-client>=0.1.1",
    "pytest>=8.4.1",
    "slowapi",
    "pandas",
    "aiokafka>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "pytest-asyncio",
    "pytest-mock",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["src/finder_enrichment/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=finder_enrichment --cov-report=term-missing"

[tool.uv]
# Force rebuild of local packages
reinstall = true

[tool.uv.sources]


[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 

[dependency-groups]
dev = [
    "twine>=6.1.0",
]
